re-style product show page to stop faulty wrapping

--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -22,7 +22,7 @@
   background: #4D0C02;
   color: rgba(255, 255, 255, 0.88);
   width: 100%;
-  min-width: 1050px;
+  min-width: 1110px;
   z-index: 10;
 }
 
