--- a/app/assets/stylesheets/show/show-product.css
+++ b/app/assets/stylesheets/show/show-product.css
@@ -4,7 +4,7 @@
   vertical-align: top;
 }
 .product-image-specs-cart-wrapper {
-  min-width: 1000px;
+  min-width: 1110px;
   display: block;
   margin: 30px 0;
 }
@@ -27,8 +27,8 @@
 
 .product-specs-wrapper {
   display: block;
-  max-width: 50%;
-  min-width: 300px;
+  max-width: calc(100% - 400px);
+  min-width: 377px;
   float: left;
 }
 
@@ -49,7 +49,6 @@
   color: rgba(23, 124, 23, 1);
   font-weight: 700;
   padding: 5px 0;
-  margin: 0 40px;
 }
 
 .same-day-delivery {
@@ -85,7 +84,8 @@
 .product-description-index {
   display: block;
   width: 100%;
-  margin: 20px 40px;
+  margin: 20px;
+  padding: 0 40px;
 }
 
 .description-header {
